[package]
name = "fiat-lux"
version = "0.3.11"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "./README.md"
homepage = "https://github.com/archer884/fiat-lux"
repository = "https://github.com/archer884/fiat-lux"
description = """
Offline terminal-accessible Bible.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.58", features = ["derive", "wrap_help"] }
comfy-table = "7.2.2"
directories = "6.0.0"
pager = { version = "0.16.1", optional = true }
regex = "1.12.3"
tantivy = "0.25.0"
terminal_size = "0.4.3"
textwrap = { version = "0.16.2", features = ["hyphenation"] }
thiserror = "2.0.18"

[features]
default = ["pager"]
pager = ["dep:pager"]

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
