[package]
name = "fiat-lux"
version = "0.3.14"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "./README.md"
homepage = "https://github.com/archer884/fiat-lux"
repository = "https://github.com/archer884/fiat-lux"
description = """
Offline terminal-accessible Bible.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronograf = "0.2"
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env"] }
comfy-table = "7.2.2"
directories = "6.0.0"
indexmap = "2.14.0"
pager = { version = "0.16.1", optional = true }
tantivy = "0.26.1"
terminal_size = "0.4.4"
textwrap = { version = "0.16.2", features = ["hyphenation"] }
thiserror = "2.0.18"
unicode-width = "0.2"

[features]
default = ["pager"]
pager = ["dep:pager"]

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
